WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272612
[Remote Inspection] nth-child selectors may target the wrong element
https://bugs.webkit.org/show_bug.cgi?id=272612
Summary
[Remote Inspection] nth-child selectors may target the wrong element
Wenson Hsieh
Reported
2024-04-12 17:26:11 PDT
rdar://126362427
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-04-12 17:32:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27209
EWS
Comment 2
2024-04-12 22:39:33 PDT
Committed
277449@main
(aebf3a2151c5): <
https://commits.webkit.org/277449@main
> Reviewed commits have been landed. Closing PR #27209 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug