[Remote Inspection] nth-child selectors may target the wrong element https://bugs.webkit.org/show_bug.cgi?id=272612 rdar://126362427

Reviewed by Megan Gardner and Abrar Protyasha.

Currently, the `N` used for `nth-child(N)` selectors when extracting targeted elements represents
the Nth index of that element type; instead, it should represent the Nth element child relative to
the parent (regardless of type). Fix this bug by adjusting `parentRelativeSelectorRecursive`, and
add an API test to cover these cases.

* Source/WebCore/page/ElementTargetingController.cpp:
(WebCore::findChild):
(WebCore::parentRelativeSelectorRecursive):
(WebCore::childIndexByType): Deleted.
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ElementTargetingTests.mm:
(TestWebKitAPI::TEST(ElementTargeting, ParentRelativeSelectors)):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/element-targeting-5.html: Added.

Canonical link: https://commits.webkit.org/277449@main